--- a/2.데이터 클린징/2.Quiz.ipynb
+++ b/2.데이터 클린징/2.Quiz.ipynb
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "id": "1ef6acdb-99eb-4d11-a35a-3da0d13bb528",
    "metadata": {},
    "outputs": [
@@ -2197,7 +2197,7 @@
        "4  2019-11-05 12:39        3   중랑센터    7.0  10.0  1650.0  120  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2978,6 +2978,156 @@
    ],
    "source": [
     "df.fillna(df.mean(), inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f4d9d8ab-5ab5-46f0-b6e9-f71eca1eac33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>자전거번호</th>\n",
+       "      <th>대여일시</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>대여소명</th>\n",
+       "      <th>대여거치대</th>\n",
+       "      <th>반납일시</th>\n",
+       "      <th>반납대여소번호</th>\n",
+       "      <th>반납대여소명</th>\n",
+       "      <th>반납거치대</th>\n",
+       "      <th>이용시간</th>\n",
+       "      <th>이용거리</th>\n",
+       "      <th>나이</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SPB-23220</td>\n",
+       "      <td>2019-11-01 8:48</td>\n",
+       "      <td>646</td>\n",
+       "      <td>장한평역 1번출구 (국민은행앞)</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2019-11-01 9:01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>중랑센터</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1100.000000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SPB-16216</td>\n",
+       "      <td>2019-11-04 8:38</td>\n",
+       "      <td>646</td>\n",
+       "      <td>장한평역 1번출구 (국민은행앞)</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2019-11-04 8:56</td>\n",
+       "      <td>3</td>\n",
+       "      <td>중랑센터</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SPB-21097</td>\n",
+       "      <td>2019-11-04 8:46</td>\n",
+       "      <td>646</td>\n",
+       "      <td>장한평역 1번출구 (국민은행앞)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-11-04 8:57</td>\n",
+       "      <td>3</td>\n",
+       "      <td>중랑센터</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2668.070388</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SPB-22292</td>\n",
+       "      <td>2019-11-05 8:34</td>\n",
+       "      <td>646</td>\n",
+       "      <td>장한평역 1번출구 (국민은행앞)</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-11-05 8:45</td>\n",
+       "      <td>3</td>\n",
+       "      <td>중랑센터</td>\n",
+       "      <td>2.834951</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1380.000000</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SPB-07935</td>\n",
+       "      <td>2019-11-05 12:29</td>\n",
+       "      <td>512</td>\n",
+       "      <td>뚝섬역 1번 출구 옆</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2019-11-05 12:39</td>\n",
+       "      <td>3</td>\n",
+       "      <td>중랑센터</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1650.000000</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       자전거번호              대여일시  대여소번호               대여소명  대여거치대  \\\n",
+       "0  SPB-23220   2019-11-01 8:48    646  장한평역 1번출구 (국민은행앞)    3.0   \n",
+       "1  SPB-16216   2019-11-04 8:38    646  장한평역 1번출구 (국민은행앞)    2.0   \n",
+       "2  SPB-21097   2019-11-04 8:46    646  장한평역 1번출구 (국민은행앞)    1.0   \n",
+       "3  SPB-22292   2019-11-05 8:34    646  장한평역 1번출구 (국민은행앞)    1.0   \n",
+       "4  SPB-07935  2019-11-05 12:29    512        뚝섬역 1번 출구 옆   11.0   \n",
+       "\n",
+       "               반납일시  반납대여소번호 반납대여소명     반납거치대  이용시간         이용거리   나이  \n",
+       "0   2019-11-01 9:01        3   중랑센터  7.000000  12.0  1100.000000   50  \n",
+       "1   2019-11-04 8:56        3   중랑센터  2.000000   7.0  1420.000000   31  \n",
+       "2   2019-11-04 8:57        3   중랑센터  7.000000  10.0  2668.070388   32  \n",
+       "3   2019-11-05 8:45        3   중랑센터  2.834951  10.0  1380.000000   21  \n",
+       "4  2019-11-05 12:39        3   중랑센터  7.000000  10.0  1650.000000  120  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df[[\"대여거치대\", \"반납거치대\", \"이용시간\", \"이용거리\"]].fillna(df[[\"대여거치대\", \"반납거치대\", \"이용시간\", \"이용거리\"]].mean(), inplace=True)\n",
+    "# 원하는 부분을 명확하게 지정하여 수정\n",
+    "df.loc[:, [\"대여거치대\", \"반납거치대\", \"이용시간\", \"이용거리\"]] = df[[\"대여거치대\", \"반납거치대\", \"이용시간\", \"이용거리\"]].fillna(df[[\"대여거치대\", \"반납거치대\", \"이용시간\", \"이용거리\"]].mean())\n",
+    "\n",
     "df.head()"
    ]
   },
